# libreconnect

./: .gitignore  CHANGELOG.md  Cargo.toml  INTEGRATION_TESTING_GUIDE.md  MAINTENANCE_GUIDE.md  NEXT_STEPS.md  README.md  cleanup_test.sh  libreconnect_spec.md  test_integration.py  test_manual.sh
certs/: cert.pem  key.pem
cli/: Cargo.toml
cli/src/: commands.rs  lib.rs  main.rs
cli/tests/: integration.rs
daemon/: Cargo.toml  build.rs
daemon/src/: daemon.cpp  daemon.rs  ffi.rs  lib.rs  main.rs
mobile/android/: INTEGRATION_STATUS.md  PLUGIN_ALIGNMENT.md  PROJECT_COMPLETION.md  QUICKSTART.md  README.md  UI_STRUCTURE.md  settings.gradle.kts
mobile/android/app/: CMakeLists.txt  build.gradle.kts  build.gradle.kts.clean
mobile/android/app/src/androidTest/java/dev/libretools/connect/: ExampleInstrumentedTest.kt
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/dev/libretools/connect/: MainActivity.kt
mobile/android/app/src/main/java/dev/libretools/connect/data/: DeviceModels.kt  PairedDeviceStorage.kt
mobile/android/app/src/main/java/dev/libretools/connect/network/: DeviceDiscovery.kt  NetworkManager.kt  ProtocolAdapter.kt
mobile/android/app/src/main/java/dev/libretools/connect/service/: LibreConnectService.kt  ServiceConnection.kt
mobile/android/app/src/main/java/dev/libretools/connect/ui/components/: CommonComponents.kt
mobile/android/app/src/main/java/dev/libretools/connect/ui/screens/: DeviceScreens.kt  MainScreen.kt  PairingScreen.kt  PluginScreens.kt  SettingsScreens.kt
mobile/android/app/src/main/java/dev/libretools/connect/ui/theme/: Color.kt  Theme.kt  Type.kt
mobile/android/app/src/main/java/dev/libretools/connect/utils/: DeviceUtils.kt
mobile/android/app/src/main/res/values/: strings.xml  themes.xml
mobile/android/app/src/test/java/dev/libretools/connect/: ExampleUnitTest.kt
mobile/android/gradle/: libs.versions.toml
mobile/android/gradle/wrapper/: gradle-wrapper.properties
plugins/: Cargo.toml
plugins/src/: enigo_utils.rs  lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
tests/integration/: Cargo.toml  cli_daemon_integration.rs
