[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugins = { version = "0.1.0", path = "../plugins" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1.46.1", features = ["full"] }
