[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[lib]
name = "daemon"
crate-type = ["rlib"]

[[bin]]
name = "libreconnectd"
path = "src/main.rs"

[dependencies]
plugins = { version = "0.1.0", path = "../plugins" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1.46.1", features = ["full"] }
mdns-sd = "0.11.0"
thiserror = "1.0"
hostname = "0.3"
